[Fixes #331] Collapse identical definitions.

--- a/wwwbase/css/main.css
+++ b/wwwbase/css/main.css
@@ -189,6 +189,25 @@ abbr[title] {
   margin-bottom: 0;
 }
 
+.defSourceList {
+  display: inline;
+  list-style: none;
+  padding: 0px;
+}
+
+.defSourceList li {
+  display: inline;
+  padding-right: 0px;
+}
+
+.defSourceList li:not(:first-child) {
+  padding-left: 0px;
+}
+
+.defSourceList li:not(:first-child):before {
+  content: ', ';
+}
+
 .spaced {
   letter-spacing: 3px;
   padding-left: 2px;
